@@ -5,6 +5,7 @@ DIST blaze-0.6.0.tar.gz 639673 SHA256 5d054d75d8a6c49f14b0f685ed4f5722f509de3021
 DIST blaze-0.6.5.tar.gz 809184 SHA256 da469283eaac7b9d7f0f3ee04a4eadfdde3592b6500d972f11909b9defd62325 SHA512 590ee9c3cded4628af77e0e36e3db372f03a22a87011e7c57114b3ead0b751b5a4a7c93db01e2b579db3fe6ef10bea71004033c8831bea85cdd3c8e09d86beba WHIRLPOOL 32550623814d8bc78934304a943e8abe5a5330f2699b625083afb6c0f227f1bad7baea167641596719d5b1087001bacdee716bbf5a9f27109d4a47c2fc3b133f
 DIST blaze-0.6.6.tar.gz 840822 SHA256 890920923643e71fd2784df0c3f126ed058fc4b7a0cf57ffed7b596c4a18bebd SHA512 e69e428430d7fd9badc42bad3a1d605fd7e984548d62a06b385d62ee8d6c9c8e2ae4c96baab7c7b5a24cd44e8a09d26e567311c023614d47cc07546df47379ef WHIRLPOOL 43ccee02e9a6e500faddfe235961746ee98f4d492908f0e2170de6b820b510df750cf6795a0c35489dc182ba73997df3d81f92f3d3aac081728b00ae22be7452
 DIST blaze-0.6.7.tar.gz 854464 SHA256 0701317b86866cde70cca544aa94efe991fa5a0bc6d20f0c50481a2bcbd3b022 SHA512 50e69fa602b94abc7bd10fbbbaf0198c98d94b07ac04a9e53e5e6c9bb577183cdf9daafa42f618b0950efdd0db15d35925fd06e97204596e5ba6d44ab2cc0a27 WHIRLPOOL 001a9c41fddfa4ef5dc38d66e6191f4137b6a2ba3178187ba0fc91f873d5ae9858317ad7438bc9db1493f45ceba5b4904e5557158a25743d7498fad049b43aeb
+DIST blaze-0.6.8.tar.gz 736021 SHA256 04824fde8b4eed0ea8b2a546ae90b63c7a24ddf371758e62e724b91bfec7d2b8 SHA512 4e98cff0cc0b9f1a788159aa60c1d0751402abfe874ce6c665df77fff727ba4260f787f41d59b6fb49dbabceba389e8f146e59b94571b064bbd5a26fbf9ff30a WHIRLPOOL e3bea3bd68c75613cc257400b051d22fe5ddba0fcfa54467d80d54f369709ea1f11c682f741db155bae752a1476b5d504bc9df04cef223952c39e893005ea6a2
 EBUILD blaze-0.4.1.ebuild 1301 SHA256 c097056145c28c887987478183a89028046e5d6d803b486840c1a71274c22a40 SHA512 ed273e75d51360a6026a389e263a0aac51a1d5e4af32ffa4c18ee8f84fef5ddf42dc97b63317385abb4e0e856660e0f70dd91e5b3a664e7ac2d0d9ad898ba409 WHIRLPOOL 5ed90f4d4d08470f0d8fcd62e034af1fef0fcb887c0464c370ae11b08ee61d5e8b0235ff4e7b8c8f4e2546d97425b8231793e01d7f79c7cdfe0ed272db11ede6
 EBUILD blaze-0.4.2.ebuild 1301 SHA256 8f8d5cd5cd4527e7300c50b6dfa36851e55c6e216236e2a378d795fcd46806a7 SHA512 b17811095c0eaab8aeb89b320ac13dbde022c87949b332caa9813cb65e6b878c8f6154eb75f85dbd7bf3ec84cfdc43cb4b6f5c3a8b70ecef16fc58dcf425e2c8 WHIRLPOOL 51dd46e6325b641e1afee5036e64480d438eca4c197a2f7e8154bd221b4c0fe50d637fc192e1e175596d428ba977b61df2a5d8f39f1fd2528759c06b4ca684aa
 EBUILD blaze-0.5.0.ebuild 1450 SHA256 fc0fd6b4ed91fd8ed2cac7ed65905b0bd6942424c8793dcb8b11c79287982bdb SHA512 c03950692d33402e720a68d6e8f6893e9308339f13e10680fd5703de5cb0ae53c19aed1d0e492bbc1dee08279a4127d3ffe7041b3b24b0caec73415263f69bcb WHIRLPOOL acc3b2b0fe0d386eb077bdbcca2d945ff77a7905d7107f859fe1c460406057a69c88cf910643557504486d0f2f66a2a721adfb86a734172785d99582814fdc1b
@@ -12,5 +13,6 @@ EBUILD blaze-0.6.0.ebuild 1658 SHA256 619f48b097841b683633a2d971336d943de07598b0
 EBUILD blaze-0.6.5.ebuild 2666 SHA256 7ba2e035328d5f9334f04662598a92499ca5cf65e07b7e2a95c16a26c160bfa2 SHA512 17e6e35b6c90b88ce8f5d4da9699934f61751d37176a751cb98e8d4a5c77c15412d2bad878da4fa369140714933e71c6969687d31a9a7b62d46f9f54ccb0be92 WHIRLPOOL ae9d118f69ad9f6944503d8a939529e88f123aaa95ff1f9a43551578561aa4488f10f35e668e4a621815e9c1ea1e58017a49d91454f93edcad4644f8e027bd4b
 EBUILD blaze-0.6.6.ebuild 2703 SHA256 b7a1af81d1b6a318544a312f2c39058019a67bd95087022323a11ce98f21570a SHA512 6de9d3b8f3d971ad8c2b74b52e912cce3cba9aac154d32415a042ebd41901019c7d3d30d34f4956f36620c21d33ab359eae4701fefbba5fd23a3c1ac3ab55b3d WHIRLPOOL 717b81d217ab65206093e87169692cf7b9c0b059cd19a0b69f08eb3037f7f427bf2419e011047a9ec6c0c6a770b347d989479cd5e5067cf2ba1465a648a96f18
 EBUILD blaze-0.6.7.ebuild 2703 SHA256 fe4404ec2288e6353e2787f041c5cffca93d7ed284de9538c0c596b348b60672 SHA512 ab6f3e77378bbf213520cecf031825e1f39e6f3688998f5b7d8f1af5dc0da092cd1c59da0111bef917560c23a81da793d483df6ac624f8ae2ed63b38d888d3ce WHIRLPOOL c2e615a4849318dca26549585d5024c2c1f97e67b742e3fffad843aaba1ada485f2dec9f1032491fdc6b74810f1e3edc9be72edb81afd9a134431481e5fe8588
-MISC ChangeLog 1717 SHA256 fea1668354eb9fcc64d9a874c79f26f1c66ea3e686438addac5db95f14c49a99 SHA512 35e3522c2b064459d770c99dd3b7be5dab8a79ec8c1bda9e618b2ba5113f3c21c0e30e6b9a7454d903488b39653141dc62bdd5a39a6af7cce6531638227b6e42 WHIRLPOOL 56b4aa2009afed4ef9fd1704ed3c8b4ce79cdf4bec1b450069e1dfbf304d479dcfe1891a43edde707101450c5570ad71ec87982123689b9e8d4277a1ede7c36b
+EBUILD blaze-0.6.8.ebuild 2839 SHA256 d66f706583ea20f2a9b4427ef9b0d6935d3b2c352009d0e62db4f7e457ecb6b0 SHA512 ff5f9fee311cdb334432cae2dd5397ceaf456ba903ec693fe3b8f11d6bec0b7259ed17f5c8bed2e0d0177eb207ee9ad5f2d152644a730918a38edda28283127b WHIRLPOOL 12cc917368c12deb220cd312aa6e9afa3203ea0fcb8ef60b67c4e38105833ba2761505356d8472fa161ee4fef7eb9b7f1e0bd9606d2dbc5cad3d8c30ab9320d5
+MISC ChangeLog 1843 SHA256 4f81628322638573a2d5eb874323c50980f556a5294301670ba675c7d87cc83b SHA512 1ccae78b2f33c601f22c15b4441c4957c00919b77bb586ce9bbbe6ac9947f5524613011f3ce532d0248d2a6e8dfa538a79f2370cd908cb39676e7c0ea3a43708 WHIRLPOOL 448e6dbb9134649f6f61723c8d731de0ee50c33fe6dfc987cf3cac3cc85688597b3fbaff1f9eb63a7f442ae6228093663343c808ae61da61d4948e579f8f168a
 MISC metadata.xml 444 SHA256 3b34caf899828e49ff64ef22e0f3d2953e043d99d0c56a291a9456b1453a6f4a SHA512 53a353b79549b0e6c42181702e086e8d8f410d1a33a4e557cfaf784e4c845254330821e99d057018016f1abe89d897ab8143c1cac0a7b644cda2354b648f2455 WHIRLPOOL 88779c4487d94a00056e65e26a68cc0267241b740d146c3b0bc9a05b9fe8d1bfa56ca31361957abfa00f18dbd77d12b23f75bce37c75b45544908c75d4f0bc02
