@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/blaze
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/blaze/ChangeLog,v 1.10 2014/11/28 07:46:16 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/blaze/ChangeLog,v 1.11 2014/12/19 08:05:43 patrick Exp $
+
+*blaze-0.6.8 (19 Dec 2014)
+
+  19 Dec 2014; Patrick Lauer <patrick@gentoo.org> +blaze-0.6.8.ebuild:
+  Bump, add some new deps
 
 *blaze-0.6.7 (28 Nov 2014)
 
